# raft-lite

./: .gitignore  1  Cargo.toml  DESIGN.md  MULTI_RAFT.md  README.md  STRUCTURE.md  build.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs  node.rs  router.rs  server.rs  state_machine.rs
crates/raft/: Cargo.toml
crates/raft/proto/: pb.proto
crates/raft/src/: build.rs  lib.rs  multi_raft_driver.rs  types.rs
crates/raft/src/network/: mod.rs
crates/raft/src/state/: client.rs  config.rs  leader_transfer.rs  mod.rs  read_index.rs  replication.rs  snapshot.rs
crates/raft/src/storage/: file_storage.rs  mod.rs
crates/raft/src/storage/examples/: file_storage_example.rs
crates/raft/src/storage/log/: entry.rs  manager.rs  mod.rs  segment.rs
crates/raft/src/storage/snapshot/: mod.rs  tests.rs
crates/raft/tests/: cluster_learner_test.rs  cluster_test.rs  config_snapshot_test.rs  integration_tests.rs  mod.rs  network_inflight_test.rs  network_leader_election_test.rs  prevote_readindex_test.rs  snapshot_test.rs  storage_persistence_test.rs
crates/raft/tests/common/: mod.rs  test_cluster.rs  test_node.rs  test_statemachine.rs
crates/raft/tests/mock/: mock_network.rs  mock_storage.rs
crates/redis/: Cargo.toml
crates/redis/src/: async_encoder.rs  async_parser.rs  encoder.rs  lib.rs  parser.rs
crates/redisstore/: Cargo.toml
crates/redisstore/src/: lib.rs  memory.rs  operation.rs  traits.rs
examples/: file_storage_example.rs
examples/raft-kv/: DESIGN.md  FEATURES.md  README.md  STRUCTURE.md
proto/: pb.proto
raft-kv/: Cargo.toml
raft-kv/src/: main.rs
src/: callback_wrap.rs  cluster_config.rs  error.rs  event.rs  lib.rs  message.rs  mock_network.rs  mock_storage.rs  multi_raft_driver.rs  mutl_raft_driver.rs  pb.rs  pipeline.rs  traits.rs
src/mock/: mock_network.rs  mock_storage.rs
src/network/: mod.rs  pb.rs
src/state/: client.rs  config.rs  election.rs  leader_transfer.rs  mod.rs  read_index.rs  replication.rs  snapshot.rs
src/storage/: file_storage.rs  mod.rs
src/storage/log/: entry.rs  manager.rs  mod.rs  segment.rs  store.rs  tests.rs
src/storage/snapshot/: store.rs  tests.rs
src/storage/wal/: mod.rs
src/tests/: mod.rs
src/tests/mock/: mock_network.rs  mock_storage.rs  mod.rs
src/wal/: mod.rs
tests/: cluster_learner_test.rs  cluster_test.rs  config_snapshot_test.rs  integration_tests.rs  network_inflight_test.rs  network_leader_election_test.rs  prevote_readindex_test.rs  run_tests_until_failure.sh  snapshot_test.rs  storage_persistence_test.rs
tests/common/: mod.rs  test_cluster.rs  test_node.rs  test_statemachine.rs
