[package]
name = "raft-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net", "parking_lot"] }
tracing = "0.1.41"
async-trait = "0.1.80"
bincode = "1.3.3"
use = "0.0.1-pre.0"
parking_lot = "0.12.4"
heapless = "0.8.0"
thiserror = "2.0.12"
serde_json = "1.0.142"
lru-cache = "0.1.2"
anyhow = "1.0.98"
log = "0.4.27"
# HTTP dependencies for simple_kv example
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.10"
protobuf = "3.7.2"
tonic = "0.14.0"
prost = "0.14.1"
tonic-prost = "0.14.0"
tracing-subscriber = "0.3.19"


[build-dependencies]
tonic-prost-build = "0.14.0"

