[package]
name = "raft-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime and utilities
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net", "parking_lot"] }
async-trait = "0.1.80"
parking_lot = "0.12.4"

# Serialization and data handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging
tracing = "0.1.41"
log = "0.4.27"

# Testing utilities
rand = "0.9.2"

# gRPC/Protobuf support (for network layer)
#protobuf = "3.7.2"
tonic = "0.14.1"
prost = "0.14.1"
tonic-prost = "0.14.0"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-prost-build = "0.14.1"

