[workspace]
members = [
    "crates/raft",
    "crates/node",
    "crates/redis",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Core async runtime and utilities
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net", "parking_lot", "fs"] }
async-trait = "0.1.89"
parking_lot = "0.12.5"

# Serialization and data handling
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.43"
log = "0.4.29"
tracing-subscriber = "0.3.22"

# Testing utilities
rand = "0.9.2"

# gRPC/Protobuf support
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
bincode = { version = "2.0.1", features = ["serde"] }
crc32fast = "1.5.0"

# Cryptographic hashing
sha2 = "0.10"

# Redis protocol support
redis = "0.32.7"
resp = "1.0.3"

# HTTP server
axum = "0.8.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Metrics
prometheus = "0.14.0"

