[package]
name = "raft-kv"
version = "0.1.0"
edition = "2021"
description = "A distributed, high-availability, high-performance Redis-compatible key-value store built on Raft consensus"
license = "MIT"

[[bin]]
name = "raft-kv"
path = "src/main.rs"

[dependencies]
# Raft consensus library
raft = { path = "../crates/raft" }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }
sha2 = { workspace = true }

# Redis protocol support
redis = { workspace = true }
resp = { workspace = true }

# HTTP server for management API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Metrics
prometheus = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3.23.0"

