[package]
name = "raft"
version = "0.1.0"
edition = "2021"
description = "A lightweight Raft consensus algorithm implementation"
license = "MIT"

[dependencies]
# Core async runtime and utilities
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net", "parking_lot", "fs"] }
async-trait = "0.1.89"
parking_lot = "0.12.5"

# Serialization and data handling
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.43"
log = "0.4.29"

# Testing utilities
rand = "0.9.2"

# gRPC/Protobuf support (for network layer)
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tracing-subscriber = "0.3.22"
bincode = { version = "2.0.1", features = ["serde"] }
crc32fast = "1.5.0"

# Cryptographic hashing for data integrity
sha2 = "0.10"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3.23.0"

