[package]
name = "redis-protocol"
version = "0.1.0"
edition = "2021"
description = "Redis protocol (RESP) parser and encoder with async support"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["io-util", "net"] }
# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
